Fix some warnings of SoarQube on the Spot heriarchy.
- Make some static fields truly immutable.
- Use proper static fields.
- Common format string.